--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
 <div class="container-fluid">
-<button class="">BUTTON!</button>
+<button type="button1">Easy</button>
+<button type="button2">Harder</button>
+<button type="button3">Hardest</button>
 </div>
 
 <div class="answerDisplay"></div>
