--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
 <div class="container-fluid">
-<button type="button1">Easy</button>
-<button type="button2">Harder</button>
-<button type="button3">Hardest</button>
+	<button class="btn btn-success" type="button" value="easy">Easy</button>
+	<button class="btn btn-warning" type="button" value="harder">Harder</button>
+	<button class="btn btn-danger" type="button" value="hardest">Hardest</button>
 </div>
 
 <div class="answerDisplay"></div>
